# asterisk-voicechanger

./: .hgignore  AUTHORS  CREDITS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.inc  README  README.md  app_voicechangedial.c  app_voicechanger.c  bootstrap.sh  configure.ac  sanity.sh  voicechanger.cpp  voicechanger.h
m4/: asterisk.m4  soundtouch4c.m4
